# nav2_send_goal_rust

./: .gitignore  Cargo.toml  README.md  package.xml  ros2_rust_install_script.sh
.github/: Dockerfile.humble
.github/workflows/: build-test.yaml
src/: lib.rs  main.rs  send_goal.rs  waypoint.rs
