<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_send_goal_rust</name>
  <version>1.0.0</version>
  <description>The nav2_send_goal_rust package</description>
  <maintainer email="beike315@icloud.com">Tatsuhio ikebe</maintainer>
  <license>Apache-2.0</license>
  <author>Tatsuhio ikebe</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
